--- a/style.css
+++ b/style.css
@@ -6,13 +6,16 @@
   box-sizing: border-box;
 }
 
-.container {
+body {
+  background: linear-gradient(to right, rgb(0, 90, 167), rgb(255, 253, 228));
+}
+body .container {
   height: 100%;
   max-width: 100%;
   display: flex;
   justify-content: center;
 }
-.container .wrapper {
+body .container .wrapper {
   width: 400px;
   max-width: 100%;
   max-height: 100vh;
@@ -21,17 +24,17 @@
   margin-top: 5rem;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
 }
-.container .wrapper header {
+body .container .wrapper header {
   border-bottom: 1px solid black;
-  height: 150px;
+  height: 200px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   position: relative;
-  padding: 1rem;
   color: white;
+  padding: 1rem;
 }
-.container .wrapper header:before {
+body .container .wrapper header:before {
   content: "";
   left: 0;
   right: 0;
@@ -45,88 +48,97 @@
   z-index: -1;
   opacity: 1;
 }
-.container .wrapper header #clear {
+body .container .wrapper header #clear {
   cursor: pointer;
   padding: 1rem;
   font-size: 1.2rem;
   transition: 0.1s ease-out;
 }
-.container .wrapper header #clear:hover {
+body .container .wrapper header #clear:hover {
   rotate: 30deg;
 }
-.container .wrapper header .header-top,
-.container .wrapper header .header-bottom {
+body .container .wrapper header .header-top,
+body .container .wrapper header .header-bottom {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-.container .wrapper header .header-top #date,
-.container .wrapper header .header-top #header-pic,
-.container .wrapper header .header-bottom #date,
-.container .wrapper header .header-bottom #header-pic {
+body .container .wrapper header .header-top #date,
+body .container .wrapper header .header-top #header-pic,
+body .container .wrapper header .header-bottom #date,
+body .container .wrapper header .header-bottom #header-pic {
   flex-grow: 2;
 }
-.container .wrapper .btn-group {
-  margin: 1rem;
+body .container .wrapper .content-wrapper {
+  background-color: white;
+  border-radius: 0 0 10px 10px;
+}
+body .container .wrapper .content-wrapper .btn-group {
+  padding: 1rem;
   display: flex;
   justify-content: space-around;
 }
-.container .wrapper .btn-group button {
+body .container .wrapper .content-wrapper .btn-group button {
   padding: 0.2rem;
   cursor: pointer;
 }
-.container .wrapper .content {
+body .container .wrapper .content-wrapper .content {
   padding: 1rem;
   min-height: 300px;
 }
-.container .wrapper .content #list {
+body .container .wrapper .content-wrapper .content #list {
   list-style-type: none;
-  display: flex;
-  flex-direction: column-reverse;
+  padding-left: 0 !important;
 }
-.container .wrapper .content #list .item {
+body .container .wrapper .content-wrapper .content #list .item {
   display: flex;
   margin: 1rem;
   font-size: 1.2rem;
 }
-.container .wrapper .content #list .item i {
+body .container .wrapper .content-wrapper .content #list .item i {
   cursor: pointer;
 }
-.container .wrapper .content #list .item .fa-circle-check {
+body .container .wrapper .content-wrapper .content #list .item .fa-circle-check {
   color: #6eb200;
 }
-.container .wrapper .content #list .item .lineThrough {
+body .container .wrapper .content-wrapper .content #list .item .lineThrough {
   text-decoration: line-through;
 }
-.container .wrapper .content #list .item .text {
+body .container .wrapper .content-wrapper .content #list .item .text {
   margin-left: 10px;
 }
-.container .wrapper .content #list .item .delete {
+body .container .wrapper .content-wrapper .content #list .item .delete {
   margin-left: auto;
 }
-.container .wrapper .content #list .item .delete:hover {
+body .container .wrapper .content-wrapper .content #list .item .delete:hover {
   color: red;
   transition: 0.2s ease-out;
 }
-.container .wrapper .add-item {
+body .container .wrapper .add-item {
   position: relative;
   display: flex;
+  flex-direction: row-reverse;
   align-items: center;
   padding: 1rem;
 }
-.container .wrapper .add-item .fa-circle-plus {
+body .container .wrapper .add-item .fa-circle-plus {
   position: absolute;
   font-size: 1.6rem;
   padding: 1rem;
   cursor: pointer;
 }
-.container .wrapper .add-item #input {
+body .container .wrapper .add-item #input {
   padding-left: 4rem;
   font-size: 1.3rem;
   width: 100%;
   height: 50px;
   border: transparent;
 }
-.container .wrapper .add-item #input:focus {
+body .container .wrapper .add-item #input:focus {
   outline: none;
+}
+
+.hide-completed .item:has(> i.fa-circle-check),
+.hide-todo .item:has(> i.fa-circle) {
+  display: none !important;
 }/*# sourceMappingURL=style.css.map */
