--- a/style.scss
+++ b/style.scss
@@ -6,147 +6,169 @@
   box-sizing: border-box;
 }
 
-.container {
-  height: 100%;
-  max-width: 100%;
-  display: flex;
-  justify-content: center;
+body {
+  background: linear-gradient(to right, rgb(0, 90, 167), rgb(255, 253, 228));
 
-  .wrapper {
-    width: 400px;
+  .container {
+    height: 100%;
     max-width: 100%;
-    max-height: 100vh;
-    border: 1px solid black;
-    border-radius: 10px;
-    margin-top: 5rem;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+    display: flex;
+    justify-content: center;
 
-    header {
-      border-bottom: 1px solid black;
-      height: 150px;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      position: relative;
-      padding: 1rem;
-      color: white;
+    .wrapper {
+      width: 400px;
+      max-width: 100%;
+      max-height: 100vh;
+      border: 1px solid black;
+      border-radius: 10px;
+      margin-top: 5rem;
+      box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
 
-      &:before {
-        content: '';
-        left: 0;
-        right: 0;
-        top: 0;
-        bottom: 0;
-        position: absolute;
-        background-image: url('images/oeuvre-numerique-motifs-tourbillonnants-fleurs-generatives-ai.jpg');
-        background-repeat: no-repeat;
-        background-size: cover;
-        border-radius: 10px 10px 0 0;
-        z-index: -1;
-        opacity: 1;
-      }
-
-      #clear {
-        cursor: pointer;
-        padding: 1rem;
-        font-size: 1.2rem;
-        transition: .1s ease-out;
-
-        &:hover {
-          rotate: 30deg;
-        }
-      }
-
-      .header-top,
-      .header-bottom {
+      header {
+        border-bottom: 1px solid black;
+        height: 200px;
         display: flex;
+        flex-direction: column;
         justify-content: space-between;
-        align-items: center;
+        position: relative;
+        color: white;
+        padding: 1rem;
 
-        #date,
-        #header-pic {
-          flex-grow: 2;
+        &:before {
+          content: '';
+          left: 0;
+          right: 0;
+          top: 0;
+          bottom: 0;
+          position: absolute;
+          background-image: url('images/oeuvre-numerique-motifs-tourbillonnants-fleurs-generatives-ai.jpg');
+          background-repeat: no-repeat;
+          background-size: cover;
+          border-radius: 10px 10px 0 0;
+          z-index: -1;
+          opacity: 1;
+        }
+
+        #clear {
+          cursor: pointer;
+          padding: 1rem;
+          font-size: 1.2rem;
+          transition: .1s ease-out;
+
+          &:hover {
+            rotate: 30deg;
+          }
+        }
+
+        .header-top,
+        .header-bottom {
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+
+          #date,
+          #header-pic {
+            flex-grow: 2;
+          }
         }
       }
-    }
 
-    .btn-group {
-      margin: 1rem;
-      display: flex;
-      justify-content: space-around;
+      .content-wrapper {
+        background-color: white;
+        border-radius: 0 0 10px 10px;
 
-      button {
-        padding: .2rem;
-        cursor: pointer;
-      }
-    }
-
-    .content {
-      padding: 1rem;
-      min-height: 300px;
-
-      #list {
-        list-style-type: none;
-        display: flex;
-        flex-direction: column-reverse;
-
-        .item {
+        .btn-group {
+          padding: 1rem;
           display: flex;
-          margin: 1rem;
-          font-size: 1.2rem;
-
-          i {
+          justify-content: space-around;
+  
+          button {
+            padding: .2rem;
             cursor: pointer;
           }
-
-          .fa-circle-check {
-            color: #6eb200;
-          }
-
-          .lineThrough {
-            text-decoration: line-through;
-          }
-
-          .text {
-            margin-left: 10px;
-          }
-
-          .delete {
-            margin-left: auto;
-            
-            &:hover {
-              color: red;
-              transition: .2s ease-out;
+        }
+  
+        .content {
+          padding: 1rem;
+          min-height: 300px;
+  
+          #list {
+            list-style-type: none;
+            padding-left: 0 !important;
+            // display: flex;
+            // flex-direction: column-reverse;
+  
+            .item {
+              display: flex;
+              margin: 1rem;
+              font-size: 1.2rem;
+  
+              i {
+                cursor: pointer;
+              }
+  
+              .fa-circle-check {
+                color: #6eb200;
+              }
+  
+              .lineThrough {
+                text-decoration: line-through;
+              }
+  
+              .text {
+                margin-left: 10px;
+              }
+  
+              .delete {
+                margin-left: auto;
+                
+                &:hover {
+                  color: red;
+                  transition: .2s ease-out;
+                }
+              }
             }
           }
         }
+
       }
-    }
 
-    .add-item {
-      position: relative;
-      display: flex;
-      align-items: center;
-      padding: 1rem;
-
-      .fa-circle-plus {
-        position: absolute;
-        font-size: 1.6rem;
+      .add-item {
+        position: relative;
+        display: flex;
+        flex-direction: row-reverse;
+        align-items: center;
         padding: 1rem;
-        cursor: pointer;
-      }
 
-      #input {
-        padding-left: 4rem;
-        font-size: 1.3rem;
-        width: 100%;
-        height: 50px;
-        border: transparent;
+        .fa-circle-plus {
+          position: absolute;
+          font-size: 1.6rem;
+          padding: 1rem;
+          cursor: pointer;
+        }
 
-        &:focus {
-          outline: none;
+        #input {
+          padding-left: 4rem;
+          font-size: 1.3rem;
+          width: 100%;
+          height: 50px;
+          border: transparent;
+
+          &:focus {
+            outline: none;
+          }
         }
       }
     }
   }
+}
+
+// .hide-completed .is-completed,
+// .hide-todo .item:not(.is-completed ) {
+//   display: none !important;
+// }
+
+.hide-completed .item:has(> i.fa-circle-check),
+.hide-todo .item:has(> i.fa-circle) {
+  display: none !important;
 }
